[gd_scene load_steps=11 format=3 uid="uid://cnq3v2vsvdnv2"]

[ext_resource type="Script" path="res://scenes/boss/boss.gd" id="1_4jyna"]
[ext_resource type="Texture2D" uid="uid://i00lsslrw4ux" path="res://assets/sprites/tile_0340.png" id="1_fka85"]
[ext_resource type="PackedScene" uid="uid://bqorvsd42mo82" path="res://scenes/lasers/enemy_laser.tscn" id="2_1vumx"]
[ext_resource type="Texture2D" uid="uid://d4mgy681ppfbi" path="res://assets/sprites/tile_0341.png" id="2_i6hon"]
[ext_resource type="Texture2D" uid="uid://ch7jq02bubocs" path="res://assets/sprites/tile_0342.png" id="3_h46g1"]
[ext_resource type="Texture2D" uid="uid://dls15rcyk8eki" path="res://assets/sprites/tile_0343.png" id="4_3arkw"]
[ext_resource type="PackedScene" uid="uid://djevvnfyinpd0" path="res://scenes/effect_creator/effect_creator.tscn" id="6_eemb2"]

[sub_resource type="Curve" id="Curve_mvabj"]
_data = [Vector2(0, 0.879588), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_sp53b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fka85")
}, {
"duration": 1.0,
"texture": ExtResource("2_i6hon")
}, {
"duration": 1.0,
"texture": ExtResource("3_h46g1")
}, {
"duration": 1.0,
"texture": ExtResource("4_3arkw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsr26"]
size = Vector2(10, 10)

[node name="Boss" type="Area2D"]
z_index = 2
scale = Vector2(3, 3)
script = ExtResource("1_4jyna")
enemy_laser_scene = ExtResource("2_1vumx")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-1, 0)
amount = 15
lifetime = 0.5
lifetime_randomness = 0.65
direction = Vector2(1, 2.08165e-12)
spread = 15.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 25.0
initial_velocity_max = 100.0
scale_amount_curve = SubResource("Curve_mvabj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_sp53b")
autoplay = "default"
frame_progress = 0.714434

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jsr26")

[node name="EffectCreator" parent="." instance=ExtResource("6_eemb2")]
effect_scale = 5.0

[node name="FlashTimer" type="Timer" parent="."]

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
